--- a/app/src/main/res/layout/activity_listing.xml
+++ b/app/src/main/res/layout/activity_listing.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_listing"
     android:layout_width="match_parent"
@@ -11,27 +11,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ironstarfitness.thefitnessguarding.ListingActivity">
 
+
+
     <TextView
+        android:id="@+id/title_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name" />
+        android:text="@string/app_name"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:textSize="36sp"
+        android:textStyle="bold"/>
+
 
     <ListView
+        android:layout_below="@id/title_bar"
         android:id="@+id/article_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:orientation="vertical" />
+        android:layout_height="wrap_content"
+        android:dividerHeight="4dp"
+        android:orientation="vertical"
+        android:layout_above="@+id/bottom_text" />
+
+
+
 
     <TextView
+        android:id="@+id/bottom_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000000"
         android:text="@string/refresh"
         android:textColor="#666666"
         android:textSize="36dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:onClick="refresh"
+        android:gravity="center_horizontal"/>
 
 
     <TextView
@@ -50,4 +66,4 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginRight="5dp" />
-</LinearLayout>
+</RelativeLayout>
